# kafka-mcp

./: .env.example  .gitignore  CHANGELOG.md  EVALUATION.md  LICENSE  README.md  RELEASE.md  glama.json  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
.planning/: HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-COMPLETED  v1.2-COMPLETION-SUMMARY.md  v1.2-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md
.planning/milestones/v1.0-phases/01-foundation/: 01-01-SUMMARY.md  01-03-SUMMARY.md  01-CONTEXT.md  01-REVIEW-FIX.md  01-REVIEW.md  01-VERIFICATION.md  SKELETON.md
.planning/milestones/v1.0-phases/02-search-decode/: 02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-SUMMARY.md  02-CONTEXT.md  02-REVIEW.iter2.md
.planning/milestones/v1.0-phases/03-native-ship/: 03-01-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-REVIEW.md  03-VERIFICATION.md
.planning/milestones/v1.1-phases/04-extended-decode-transport/: 04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-PATTERNS.md  04-VERIFICATION.md
.planning/milestones/v1.1-phases/05-consumer-lag-tooling/: 05-02-PLAN.md  05-PATTERNS.md  05-VERIFICATION.md
.planning/milestones/v1.1-phases/06-real-broker-e2e-contour/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-SUMMARY.md
.planning/milestones/v1.1-phases/07-release-pipeline/: 07-CONTEXT.md  07-VERIFICATION.md
.planning/milestones/v1.2-phases/08-multi-topic-search-header-filtering/: 08-01-PLAN.md  (+2 more)
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-04-PLAN.md  01-04-SUMMARY.md  01-REVIEW-FIX.iter2.md  01-REVIEW.iter2.md  01-REVIEW.iter3.md
.planning/phases/02-search-decode/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-04-PLAN.md  02-05-PLAN.md  02-05-SUMMARY.md  02-REVIEW-FIX.iter2.md  02-REVIEW-FIX.md  02-REVIEW.iter3.md  02-REVIEW.md  02-VERIFICATION.md
.planning/phases/03-native-ship/: 03-01-SUMMARY.md  03-02-PLAN.md  03-CONTEXT.md  03-REVIEW-FIX.iter2.md  03-REVIEW.md
.planning/phases/04-extended-decode-transport/: .continue-here.md  04-01-PLAN.md  04-01-SUMMARY.md  04-REVIEW-FIX.md  04-REVIEW.md
.planning/phases/05-consumer-lag-tooling/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-SUMMARY.md  05-CONTEXT.md
.planning/phases/06-real-broker-e2e-contour/: 06-02-PLAN.md  06-CONTEXT.md  06-VERIFICATION.md
.planning/phases/07-release-pipeline/: 07-01-PLAN.md  07-02-PLAN.md  07-02-SUMMARY.md
.planning/phases/11-mtls-transport-hardening/: 11-01-PLAN.md  11-CONTEXT.md
.planning/phases/12-tool-surface-robustness-coverage/: 12-01-PLAN.md  12-VERIFICATION.md
.planning/phases/13-packaging-oidc-release/: 13-CONTEXT.md
.serena/: project.yml
docs/: correlation_configuration.md
docs/examples/: correlation_examples.md
openspec/: README.md
openspec/changes/enhance-correlation-engine/: design.md
openspec/specs/: kafka-mcp-api.json
openspec/specs/advanced-correlation/: spec.md
openspec/specs/bidirectional-traversal/: spec.md
openspec/specs/correlate-messages/: spec.md
openspec/specs/correlation-controls/: spec.md
openspec/specs/http-server/: spec.md
scripts/: README.md  auto-merge-and-bump.sh  git-auto-merge.sh  post-commit-automation.sh
src/kafka_mcp/: __init__.py  config.py  scanner.py  server.py
src/kafka_mcp/adapters/: __init__.py
src/kafka_mcp/domain/: __init__.py  correlation_config.py  correlation_service.py  errors.py  models.py  search_service.py
src/kafka_mcp/ports/: __init__.py  consumer.py  schema_registry.py
tests/: __init__.py  test_adapters.py  test_correlation.py  test_correlation_integration.py  test_correlation_service_enhanced.py  test_domain.py  test_inbound.py  test_lib.py  test_packaging.py  test_scanner.py  test_tool_face_coverage.py  test_tool_surface_hints.py
tests/benchmarks/: test_scan_benchmark.py
tests/integration/: conftest.py  test_basic_ops.py  test_decode.py  test_mtls_e2e.py  test_search_get.py  test_v11_surfaces.py
(+39 files in other folders)
