[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "kafka-mcp"
version = "0.1.0"
description = "Read-only Kafka MCP brick for investigating events by key in a time window"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.27",
    "confluent-kafka>=2.14",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "orjson>=3.10",
    "httpx>=0.27",
    "authlib>=1.7.2",
    "cachetools>=7.1.4",
    "certifi>=2026.5.20",
    "fastavro>=1.12.2",
    "protobuf>=7.35.0",
    "googleapis-common-protos>=1.75.0",
    "grpcio-tools>=1.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "responses>=0.25",
    "pytest-benchmark>=4.0",
]

[project.scripts]
kafka-mcp = "kafka_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kafka_mcp"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests/benchmarks"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
]
