[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "kafka-mcp"
version = "0.1.0"
description = "Read-only Kafka MCP brick for investigating events by key in a time window"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "kafka-mcp contributors"},
]
keywords = ["mcp", "kafka", "messaging", "investigator", "read-only", "observability", "claude", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "mcp>=1.27",
    "confluent-kafka>=2.14",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "orjson>=3.10",
    "httpx>=0.27",
    "authlib>=1.3",
    "cachetools>=5.3",
    "certifi>=2024.2.2",
    "fastavro>=1.12.2",
    "protobuf>=6.30",
    "googleapis-common-protos>=1.75.0",
    "grpcio-tools>=1.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-asyncio>=1.3",
    "ruff>=0.5",
    "responses>=0.25",
    "pytest-benchmark>=4.0",
]

[project.scripts]
kafka-mcp = "kafka_mcp.server:main"

[project.urls]
Homepage = "https://github.com/mshegolev/kafka-mcp"
Repository = "https://github.com/mshegolev/kafka-mcp"
Issues = "https://github.com/mshegolev/kafka-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/kafka_mcp"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests", "tests/benchmarks"]
asyncio_mode = "auto"
